kubernetes/cka/corporativo/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: corp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nginx
        resources:
          requests:
            cpu: 500m
            memory: 2Mi
          limits:
            cpu: 500m
            memory: 2Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: corp
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
