kubernetes/cka/corporativo/read.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flappy
  namespace: corp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flappy
  template:
    metadata:
      labels:
        app: flappy
    spec:
      containers:
      - name: app
        image: busybox
        command:
        - sh
        - -c
        - |
          touch /tmp/ready
          echo "Starting app"
          sleep 20
          echo "App running"
          sleep 300
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - test -f /tmp/ready
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: flappy-svc
  namespace: corp
spec:
  selector:
    app: flappy
  ports:
  - port: 80
    targetPort: 80
