kubernetes/cka/corporativo/servicio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: corp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: nginx
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: corp
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
